.metadata/.plugins/org.eclipse.cdt.ui/lab2_new.build.log
15:17:31 **** Incremental Build of configuration Debug for project lab2_new ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/tcfsh/STM32CubeIDE/workspace_1.8.0/lab2/FreeRTOS/portable/ARM_CM4F" -I"C:/Users/tcfsh/STM32CubeIDE/workspace_1.8.0/lab2/FreeRTOS/include" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'USART_Test':
../Core/Src/main.c:67:3: warning: implicit declaration of function 'memset' [-Wimplicit-function-declaration]
   67 |   memset(MonitorTset,'\0',sizeof(MonitorTset));
      |   ^~~~~~
../Core/Src/main.c:67:3: warning: incompatible implicit declaration of built-in function 'memset'
../Core/Src/main.c:21:1: note: include '<string.h>' or provide a declaration of 'memset'
   20 | #include "main.h"
  +++ |+#include <string.h>
   21 | 
../Core/Src/main.c:69:3: warning: implicit declaration of function 'itoa' [-Wimplicit-function-declaration]
   69 |   itoa(i,num,10);
      |   ^~~~
../Core/Src/main.c:70:3: warning: implicit declaration of function 'strcat' [-Wimplicit-function-declaration]
   70 |   strcat(num," ");
      |   ^~~~~~
../Core/Src/main.c:70:3: warning: incompatible implicit declaration of built-in function 'strcat'
../Core/Src/main.c:70:3: note: include '<string.h>' or provide a declaration of 'strcat'
../Core/Src/main.c:71:3: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
   71 |   sprintf(MonitorTset,"The point is %s\n\r",num);
      |   ^~~~~~~
../Core/Src/main.c:71:3: warning: incompatible implicit declaration of built-in function 'sprintf'
../Core/Src/main.c:21:1: note: include '<stdio.h>' or provide a declaration of 'sprintf'
   20 | #include "main.h"
  +++ |+#include <stdio.h>
   21 | 
../Core/Src/main.c:72:52: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
   72 |   HAL_UART_Transmit(&huart2,(uint8_t *)MonitorTset,strlen(MonitorTset),0xffff);
      |                                                    ^~~~~~
../Core/Src/main.c:72:52: warning: incompatible implicit declaration of built-in function 'strlen'
../Core/Src/main.c:72:52: note: include '<string.h>' or provide a declaration of 'strlen'
../Core/Src/main.c:73:3: warning: implicit declaration of function 'vTaskDelay' [-Wimplicit-function-declaration]
   73 |   vTaskDelay(Monitortimer);
      |   ^~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:84:1: error: unknown type name 'BaseType_t'
   84 | BaseType_t xReturned;
      | ^~~~~~~~~~
../Core/Src/main.c:85:1: error: unknown type name 'TaskHandle_t'
   85 | TaskHandle_t xHandle=NULL;
      | ^~~~~~~~~~~~
../Core/Src/main.c:85:22: warning: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
   85 | TaskHandle_t xHandle=NULL;
      |                      ^~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:118:3: warning: implicit declaration of function 'vTaskCreate' [-Wimplicit-function-declaration]
  118 |   vTaskCreate(
      |   ^~~~~~~~~~~
../Core/Src/main.c:130:3: warning: implicit declaration of function 'vTaskStartScheduler' [-Wimplicit-function-declaration]
  130 |   vTaskStartScheduler();
      |   ^~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

15:17:31 Build Failed. 3 errors, 13 warnings. (took 755ms)

